<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TimeManage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="TimeManage">TimeManage</string>
    <string name="welcome">您的时间管家</string>
    <!--personal_information-->
    <string name="team_information">团队信息</string>
    <string name="personal_information">个人信息</string>
    <string name="head_portrait">头像</string>
    <string name="username">用户名</string>
    <string name="set_nickname">编辑昵称:</string>
    <string name="telephone">手机号</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="signature">个性签名</string>
    <string name="industry">行业</string>
    <string name="scale">规模</string>
    <string name="address">地址</string>
    <string name="usertype">用户类别</string>
    <string name="public_user">普通用户</string>
    <string name="expert_user">专家用户</string>
    <string name="finish">完成</string>
    <string name="logout">退出</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="is_question">已回答</string>
    <string name="no_question">未回答</string>
    <string name="no_daudited">未审核</string>
    <string name="failed_daudited">未通过</string>
</resources>
