<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/side_nav_bar"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/ib_back"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:padding="3dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:background="#00000000"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_richpush_actionbar_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:text="@string/personal_information"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />

    <RelativeLayout
        android:id="@+id/rl_head"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="50dp"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/head_portrait"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />


        <com.timemanage.widgets.RoundImageView
            android:id="@+id/rw_head"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toLeftOf="@+id/iv_right0"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:src="@mipmap/img_default_user_portrait_150px" />

        <ImageView
            android:id="@+id/iv_right0"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/username"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_username"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right1"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="" />

        <ImageView
            android:id="@+id/iv_right1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />


    <RelativeLayout
        android:id="@+id/rl_nickname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/nickname"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_nickname"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right3"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="未设置" />

        <ImageView
            android:id="@+id/iv_right3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />

    <RelativeLayout
        android:id="@+id/rl_sex"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/sex"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_sex"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right4"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="未设置" />

        <ImageView
            android:id="@+id/iv_right4"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />

    <RelativeLayout
        android:id="@+id/rl_signature"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/signature"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_signature"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right5"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="未设置" />

        <ImageView
            android:id="@+id/iv_right5"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />
<!--
    <RelativeLayout
        android:id="@+id/rl_address"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/address"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_user_address"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right6"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="未设置" />

        <ImageView
            android:id="@+id/iv_right6"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        >

        <TextView
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:text="@string/usertype"
            android:textColor="@color/greyBlack"
            android:textSize="@dimen/font_personal_info"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_user_type"
            style="@style/PersonalInfoTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/iv_right7"
            android:layout_centerInParent="true"
            android:textSize="@dimen/font_size"
            android:text="" />

        <ImageView
            android:id="@+id/iv_right7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/yancy_bluegrey50" />
-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_finish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/login_button_shape"
            android:text="@string/finish"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>
